--- a/css/estilos.css
+++ b/css/estilos.css
@@ -273,6 +273,97 @@ nav ul li a {
     }
 }
 
+
+/*AQUI COMIENZA EL FOOTER*/
+
+footer {
+    width: 100%;
+    padding: 50px 0px;
+    font-family: 'Nunito', sans-serif;
+    background-color: var(--color-esqueleto);
+    background-image: url("../Images/background-footer.svg");
+    background-size: cover;
+    /*webkit-mask-image: url("../Images/background-footer.svg");
+    mask-image: url("../Images/background-footer.svg");
+    -webkit-mask-size: cover;
+    mask-size: cover;*/
+}
+
+.container__footer {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    max-width: 1200px;
+    margin: auto;
+    padding-top: 100px;
+    text-align: center;
+}
+
+.box__footer {
+    width: 200px;
+    margin: auto;
+    margin-bottom: 20px;
+    height: 100%;
+}
+
+.box__footer .logo img {
+    margin: auto;
+    width: 180px;
+}
+
+.box__footer .terms {
+    text-align: center;
+    max-width: 350px;
+    margin-top: 20px;
+    font-weight: 500;
+    color: #7a7a7a;
+    font-size: 18px;
+}
+
+.box__footer h2 {
+    margin-bottom: 30px;
+    color: #242424;
+    font-weight: 700;
+}
+
+.box__footer a {
+    margin-top: 10px;
+    color: #7a7a7a;
+    font-weight: 600;
+    display: block;
+    text-align: left;
+    padding-left: 40px;
+}
+
+.box__footer a:hover {
+    opacity: 0.8;
+}
+
+.box__footer a .fab {
+    font-size: 20px;
+}
+
+.box__copyright {
+    max-width: 1200px;
+    margin: auto;
+    text-align: center;
+    padding: 0px 40px;
+}
+
+.box__copyright p {
+    margin-top: 20px;
+    color: #7a7a7a;
+}
+
+.box__copyright hr {
+    border: none;
+    height: 1px;
+    background-color: #7a7a7a;
+}
+
+
+/* Responsive Desaign */
+
 @media screen and (max-width: 1100px) {
     .container__vector img {
         position: absolute;
@@ -306,7 +397,7 @@ nav ul li a {
     }
 }
 
-@media screen and (max-width: 760px) {
+@media screen and (max-width: 700px) {
     .container__info::before {
         position: relative;
     }
@@ -358,88 +449,16 @@ nav ul li a {
         margin: auto;
         font-size: 15px;
     }
-}
-
-
-/*AQUI COMIENZA EL FOOTER*/
-
-footer {
-    width: 100%;
-    padding: 50px 0px;
-    font-family: 'Nunito', sans-serif;
-    background-color: var(--color-esqueleto);
-    background-image: url("../Images/background-footer.svg");
-    background-size: cover;
-    /*webkit-mask-image: url("../Images/background-footer.svg");
-    mask-image: url("../Images/background-footer.svg");
-    -webkit-mask-size: cover;
-    mask-size: cover;*/
-}
-
-.container__footer {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    max-width: 1200px;
-    margin: auto;
-    padding-top: 100px;
-    text-align: center;
-}
-
-.box__footer {
-    display: flex;
-    flex-direction: column;
-    padding: 40px;
-    margin: auto;
-    width: 80%;
-}
-
-.box__footer .logo img {
-    width: 180px;
-}
-
-.box__footer .terms {
-    max-width: 350px;
-    margin-top: 20px;
-    font-weight: 500;
-    color: #7a7a7a;
-    font-size: 18px;
-}
-
-.box__footer h2 {
-    margin-bottom: 30px;
-    color: #242424;
-    font-weight: 700;
-}
-
-.box__footer a {
-    margin-top: 10px;
-    color: #7a7a7a;
-    font-weight: 600;
-}
-
-.box__footer a:hover {
-    opacity: 0.8;
-}
-
-.box__footer a .fab {
-    font-size: 20px;
-}
-
-.box__copyright {
-    max-width: 1200px;
-    margin: auto;
-    text-align: center;
-    padding: 0px 40px;
-}
-
-.box__copyright p {
-    margin-top: 20px;
-    color: #7a7a7a;
-}
-
-.box__copyright hr {
-    border: none;
-    height: 1px;
-    background-color: #7a7a7a;
+    .box__footer {
+        width: 100%;
+        text-align: center;
+    }
+    .box__footer a {
+        text-align: center;
+        padding: 0px;
+    }
+    .box__footer .terms {
+        width: 80%;
+        margin: auto;
+    }
 }
