--- a/css/EsService.css
+++ b/css/EsService.css
@@ -52,6 +52,7 @@
 
 .img-service {
     width: 100%;
+    border-radius: 20px;
 }
 
 .separador {
@@ -80,3 +81,31 @@
     background-color: rgba(179, 181, 182);
     cursor: pointer;
 }
+
+.chat-whats {
+    background: #1c9311;
+    width: 50px;
+    height: 50px;
+    border-radius: 90px;
+    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.65);
+    position: fixed;
+    right: 5px;
+    bottom: 60px;
+}
+
+.chat-whats i {
+    font-size: 35px;
+    padding: 6px 10px;
+    font-weight: 700;
+    color: white;
+}
+
+.chat-whats:hover {
+    background-color: white;
+}
+
+.chat-whats:hover .icon-w {
+    color: #1c9311;
+}
+
+@media(max-width: 700px) {}
