--- a/css/estilos.css
+++ b/css/estilos.css
@@ -427,9 +427,10 @@ footer {
         background: #F1FAFF;
         position: fixed;
         top: 0;
-        right: -180px;
+        right: -200px;
         padding: 0px 40px;
         transition: all 300ms;
+        width: 200px;
     }
     .move_nav {
         right: 0px;
